--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,7 @@
 
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  <%= javascript_pack_tag 'relay/index' %>
-  <%= stylesheet_pack_tag 'relay/assets/stylesheets/app' %>
-
+  <%= javascript_pack_tag 'application' %>
 </head>
 
 <body>
