--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,44 @@
-<h2>Sign up</h2>
+<div class="rl-login-box uk-flex uk-flex-center uk-flex-middle">
+  <div class="uk-container uk-width-1-1">
+    <h2 class="uk-text-center uk-text-lead uk-text-large">Glad to see you here. Join us for free!</h2>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name),
+                 html: {
+                     class: "uk-form-stacked uk-grid-small uk-width-3-4@m uk-align-center",
+                     'uk-grid': ''}) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+      <div class="uk-width-1-1">
+        <label class="uk-form-label"><%= f.label :email %></label>
+        <div class="uk-form-controls">
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "uk-input" %>
+        </div>
+      </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <div class="uk-width-1-1">
+        <label class="uk-form-label"><%= f.label :password %>
+          <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <% end %><br/>
+        </label>
+        <div class="uk-form-controls">
+          <%= f.password_field :password, autocomplete: "new-password", class: "uk-input" %>
+        </div>
+      </div>
+
+      <div class="uk-width-1-1">
+        <label class="uk-form-label"><%= f.label :password_confirmation %></label>
+        <div class="uk-form-controls">
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "uk-input" %>
+        </div>
+      </div>
+      <div class="uk-grid-small uk-flex uk-flex-right" uk-grid>
+        <%- if controller_name != 'sessions' %>
+          <%= link_to "Log in", new_session_path(resource_name), class: "uk-button uk-button-default" %>
+        <% end %>
+        <div>
+          <%= f.submit "Sign up", class: "uk-button uk-button-primary" %>
+        </div>
+      </div>
+    <% end %>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
