added exam model

--- a/app/javascript/packs/__uikit.sass
+++ b/app/javascript/packs/__uikit.sass
@@ -29,3 +29,11 @@
 
 .rl-navbar-container .uk-navbar-nav > li > a:hover::before
   right: 15px
+
+.uk-pagination
+  padding-bottom: 20px
+  font-size: 24px
+  line-height: 1
+
+  li > *
+    line-height: 1
